# mlops

./: README.md  pyproject.toml
mlops/: data.py
mlops/datasets/funcs/: data2ds.py  preprocessors.py  tagging.py
mlops/datasets/funcs/ops/: image.py  labelme.py
mlops/labels/convert/: labelme2labelme.py  labelme2yolo.py  yolo2labelme.py
mlops/labels/utils/: labelme.py
mlops/shapes/convert/: bbox2bbox.py  poly2bbox.py  poly2poly.py
mlops/shapes/typedef/: bboxes.py
src/mlops/: data.py
src/mlops/datasets/funcs/: concat.py  data2ds.py  eval.py  insts2npz.py  preprocessors.py
src/mlops/datasets/funcs/convert/: coco2insts.py  insts2coco.py  insts2npz.py  (+4 more)
src/mlops/datasets/objects/: core.py  detdataset.py  detection.py
src/mlops/datasets/structs/: datasets.py  eval.py  metrics.py
src/mlops/datasets/typing/: coco.py  image.py  labelme.py  yolo.py
src/mlops/datasets_bkp/core/: abcs.py
src/mlops/labels/funcs/: insts2labelme.py  labelme2coco.py
src/mlops/labels/typing/: __init__.py  coco.py  labelme.py  yolo.py
src/mlops/shapes/: bboxes.py  contours.py  types.py
src/mlops/shapes/funcs/: __init__.py  concat.py  insatnces.py  visualize.py
src/mlops/shapes/objects/: __init__.py  arrays.py  bboxes.py  instances.py  masks.py  others.py  polys.py  rles.py
src/mlops/shapes/structs/: instances.py
src/mlops/shapes/typing/: __init__.py  bbox.py  bboxes.py  contour.py  contours.py  eval.py  mask.py  other.py  others.py  poly.py  polys.py  rle.py  rles.py
src/mlops/shapes_bkp/funcs/: concat.py
src/mlops/shapes_bkp/typing/: bboxes.py  others.py  polys.py
(+44 files in other folders)
